--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "dotenv": "^16.1.3",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-date-picker": "^4.2.13",
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^3.4.3",
     "react-native-linear-gradient": "^2.6.2",
@@ -39,7 +41,8 @@
     "react-redux": "^8.0.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
